fix: 아이디 할달 오류 수정 및 Done리스트 wrap 설정

--- a/src/App.css
+++ b/src/App.css
@@ -44,15 +44,12 @@
   height: 40px;
   width: 140px;
 }
-.working-list {
+.todo-list {
   display: flex;
   flex-wrap: wrap;
   gap: 12px;
 }
-.done-list {
-  display: flex;
-  gap: 12px;
-}
+
 .todo-card {
   border: 2px solid #fff;
   border-radius: 12px;
